[metadata]
name = easyencoder-ATTACHMENT-STUDIOS
version = 2.0.0
author = Attachment Aditya
author_email = aditya.adigo@gmail.com
description = A text encoder to keep data safe.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/attachment-studios/encoder
project_urls =
    Bug Tracker = https://github.com/attachment-studios/encoder/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src